signin,signup,signout completed

--- a/UdemyMicroservices.Web/Pages/Auth/SignIn.cshtml
+++ b/UdemyMicroservices.Web/Pages/Auth/SignIn.cshtml
@@ -1,4 +1,40 @@
 ﻿@page
 @model SignInModel
-@{
+
+
+<div class="row justify-content-center mt-5">
+    <div class="col-md-4">
+        <h2 class="text-center">Sign In</h2>
+        <form method="post">
+            
+            <div class="alert alert-danger" asp-validation-summary="ModelOnly"></div>
+            <div class="mb-3">
+                <label asp-for="SignInViewModel.Email" class="form-label"></label>
+                <input type="text" asp-for="SignInViewModel.Email" class="form-control"/>
+                <div class="text-danger">
+                    <span asp-validation-for="SignInViewModel.Email"></span>
+                </div>
+            </div>
+            <div class="mb-3">
+                <label asp-for="SignInViewModel.Password" class="form-label"></label>
+                <input asp-for="SignInViewModel.Password" type="password" class="form-control"/>
+                <div class="text-danger">
+                    <span asp-validation-for="SignInViewModel.Password"></span>
+                </div>
+            </div>
+
+            <div class="mb-3 form-check">
+                <input asp-for="SignInViewModel.RememberMe" class="form-check-input"/>
+                <label asp-for="SignInViewModel.RememberMe" class="form-check-label"></label>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Sign In</button>
+        </form>
+    </div>
+</div>
+
+@section Scripts {
+
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
