--- a/UdemyMicroservices.Web/Pages/Auth/SignUp.cshtml
+++ b/UdemyMicroservices.Web/Pages/Auth/SignUp.cshtml
@@ -1,10 +1,10 @@
-﻿@page "/Auth/SignUp"
+﻿@page
 @model SignUpModel
 @{
 }
-<div class="row">
+<div class="row justify-content-center mt-5">
 
-    <div class="col-md-6 offset-md-3">
+    <div class="col-md-4">
         <h2 class="text-center">Sign Up</h2>
         <form method="post">
             <div class="mb-3">
@@ -14,6 +14,22 @@
                     <span asp-validation-for="SignUpViewModel.UserName"></span>
                 </div>
             </div>
+            
+            <div class="mb-3">
+                <label asp-for="SignUpViewModel.FirstName" class="form-label"></label>
+                <input asp-for="SignUpViewModel.FirstName" class="form-control" />
+                <div class="text-danger">
+                    <span asp-validation-for="SignUpViewModel.FirstName"></span>
+                </div>
+            </div>
+            <div class="mb-3">
+                <label asp-for="SignUpViewModel.LastName" class="form-label"></label>
+                <input asp-for="SignUpViewModel.LastName" class="form-control" />
+                <div class="text-danger">
+                    <span asp-validation-for="SignUpViewModel.LastName"></span>
+                </div>
+            </div>
+
             <div class="mb-3">
                 <label asp-for="SignUpViewModel.Email" class="form-label"></label>
                 <input asp-for="SignUpViewModel.Email" class="form-control"/>
@@ -43,5 +59,8 @@
 
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial"/>
+
+     @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
