--- a/UdemyMicroservices.Web/Pages/Shared/_Layout.cshtml
+++ b/UdemyMicroservices.Web/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/UdemyMicroservices.Web.styles.css" asp-append-version="true"/>
+    @await RenderSectionAsync("Css", false)
 </head>
 <body>
 <header>
@@ -25,15 +26,43 @@
                         <a class="nav-link" asp-page="/privacy">Privacy</a>
                     </li>
                 </ul>
-                <!-- Sağ tarafa SignIn ve SignUp linkleri -->
+                
+                @if(User.Identity!.IsAuthenticated)
+                {
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                @User.Identity.Name
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                                <li><a class="dropdown-item" asp-page="/auth/profile">Profile</a></li>
+                                <li><a class="dropdown-item" asp-page="/auth/settings">Settings</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" asp-page="/auth/signin" asp-page-handler="signout">Logout</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                }
+                else
+                {
                 <ul class="navbar-nav ms-auto">
+                    
+
+                    
+
                     <li class="nav-item">
-                        <a class="nav-link" asp-page="/auth/signin">SignIn</a>
+                        <a class="nav-link" asp-page="/Auth/SignIn">SignIn</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-page="/auth/signup/signup">SignUp</a>
+                        <a class="nav-link" asp-page="/Auth/SignUp">SignUp</a>
                     </li>
                 </ul>
+                }
+                
+                
+
+                <!-- Sağ tarafa SignIn ve SignUp linkleri -->
+            
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
