--- a/UdemyMicroservices.Web/Pages/Shared/_Auth_Header.cshtml
+++ b/UdemyMicroservices.Web/Pages/Shared/_Auth_Header.cshtml
@@ -7,7 +7,7 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                 <li>
-                    <a class="dropdown-item" asp-page="/instructor/index">instructor</a>
+                    <a class="dropdown-item" asp-page="/instructor/index">Instructor</a>
                 </li>
                 <li>
                     <a class="dropdown-item" asp-page="/auth/settings">Settings</a>
