--- a/UdemyMicroservices.Web/Pages/Shared/_Instructor_Layout.cshtml
+++ b/UdemyMicroservices.Web/Pages/Shared/_Instructor_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
 
 
-    <partial name="_Header"/> 
+    <partial name="_Header_Dark"/> 
  
 
     <div class="container">
@@ -20,6 +20,7 @@
         <div class="row">
             
             <div class="col-md-9">
+                <partial name="_Error"/>
                 @RenderBody()
             </div>
             <div class="col-md-3">
@@ -27,12 +28,12 @@
                 
                 <div class="list-group">
                     <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-                        The current link item
+                        Menu
                     </a>
-                    <a asp-page="/Instructor/Course/Create" class="list-group-item list-group-item-action">Create Course</a>
+                    <a asp-page="/Instructor/Index" class="list-group-item list-group-item-action">Home Page</a>
                     <a asp-page="/Instructor/Course/GetAll" class="list-group-item list-group-item-action">Course List</a>
-                    <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
-                    <a class="list-group-item list-group-item-action disabled" aria-disabled="true">A disabled link item</a>
+                    <a asp-page="/Instructor/Course/Create" class="list-group-item list-group-item-action">Create Course</a>
+                  
                 </div>
 
             </div>
