--- a/UdemyMicroservices.Web/Pages/_ViewImports.cshtml
+++ b/UdemyMicroservices.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using UdemyMicroservices.Web
 @namespace UdemyMicroservices.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, UdemyMicroservices.Web
