--- a/UdemyMicroservices.Web/Pages/Instructor/Index.cshtml
+++ b/UdemyMicroservices.Web/Pages/Instructor/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@page
-@model UdemyMicroservices.Web.Pages.Instructor.IndexModel
+@model IndexModel
 @{
-
     Layout = "Shared/_Instructor_Layout";
 }
 
