--- a/UdemyMicroservices.Web/Pages/Shared/_Error.cshtml
+++ b/UdemyMicroservices.Web/Pages/Shared/_Error.cshtml
@@ -1,39 +1,31 @@
 ﻿@using UdemyMicroservices.Web.ViewModels
 @{
-
     // var errorTitle = ViewBag.errorTitle as string;
     var errorModel = ViewData["Error"] as PageErrorModel;
 }
 
 
-
-
-
-@if (errorModel is not null )
+@if (errorModel is not null)
 {
-
-
     <div class="toast-container position-fixed bottom-0 end-0 p-3 ">
-
 
 
         <div id="errorToast" class="toast align-items-center text-bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="d-flex">
                 <div class="toast-body">
                     <div>@errorModel.Title</div>
-                    @if (@errorModel.HasDescription)
+                    @if (errorModel.HasDescription)
                     {
-
                         <div>@errorModel.Description</div>
                     }
                 </div>
                 <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
         </div>
-        
+
 
     </div>
-   
+
     <script>
 
     window.onload = function () {
@@ -46,6 +38,4 @@
     };
 
 </script>
-
-    
 }
