--- a/UdemyMicroservices.Web/Pages/Instructor/Course/GetAll.cshtml
+++ b/UdemyMicroservices.Web/Pages/Instructor/Course/GetAll.cshtml
@@ -1,66 +1,60 @@
 ﻿@page "{handler?}/{id?}"
 @model GetAllCoursesModel
 @{
-  
-
-        Layout = "Shared/_Instructor_Layout";
-    
+    Layout = "Shared/_Instructor_Layout";
 }
-
 
 
 <h2>All Courses</h2>
 
 <table class="table table-striped">
-        <thead>
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <td>Picture</td>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+        <th scope="col">Price</th>
+        <th scope="col">Category</th>
+        <th scope="col">Created</th>
+        <th scope="col">Rating</th>
+        <th scope="col">Duration</th>
+        <th scope="col">Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    @if (Model.CourseList != null && Model.CourseList.Any())
+    {
+        var index = 1;
+        foreach (var course in Model.CourseList)
+        {
+            <tr>
+                <th scope="row">@index</th>
+                <td>
+                    <course-picture class="img-fluid img-thumbnail" src="@course.PictureUrl" width="100px"/>
+                </td>
+                <td>@course.Name</td>
+                <td>@course.Description</td>
+                <td>@course.Price.ToString("C")</td>
+                <td>@course.Category.Name</td>
+                <td>@course.Created</td>
+                <td>@course.Rating</td>
+                <td>@course.Duration</td>
+                <td>
+                    <div class="btn-group" role="group">
+                        <a asp-page="Update" asp-route-id="@course.Id" class="btn btn-sm btn-primary">Edit</a>
+                        <a asp-page-handler="Delete" asp-route-id="@course.Id" class="btn btn-sm btn-danger">Delete</a>
+                    </div>
+                </td>
+            </tr>
+            index++;
+        }
+    }
+    else
+    {
         <tr>
-                <th scope="col">#</th>
-                <td>Picture</td>
-                <th scope="col">Name</th>
-                <th scope="col">Description</th>
-                <th scope="col">Price</th>
-                <th scope="col">Category</th>
-                <th scope="col">Created</th>
-                <th scope="col">Rating</th>
-                <th scope="col">Duration</th>
-                <th scope="col">Actions</th>
+            <td colspan="10" class="text-center">No courses available.</td>
         </tr>
-        </thead>
-        <tbody>
-        @if (Model.CourseList != null && Model.CourseList.Any())
-        {
-                int index = 1;
-                foreach (var course in Model.CourseList)
-                {
-                        <tr>
-                                <th scope="row">@index</th>
-                                <td>
-                                        <course-picture class="img-fluid img-thumbnail" src="@course.PictureUrl" width="100px" />
-                                </td>
-                                <td>@course.Name</td>
-                                <td>@course.Description</td>
-                                <td>@course.Price.ToString("C")</td>
-                                <td>@course.Category.Name</td>
-                                <td>@course.Created</td>
-                                <td>@course.Rating</td>
-                                <td>@course.Duration</td>
-                                <td>
-                                        <div class="btn-group" role="group">
-                                                <a asp-page="Update" asp-route-id="@course.Id" class="btn btn-sm btn-primary">Edit</a>
-                            <a asp-page-handler="Delete" asp-route-id="@course.Id" class="btn btn-sm btn-danger">Delete</a>
-                                        </div>
-                                </td>
-                        </tr>
-                        index++;
-                }
-        }
-        else
-        {
-                <tr>
-                        <td colspan="10" class="text-center">No courses available.</td>
-                </tr>
-        }
-        </tbody>
+    }
+    </tbody>
 </table>
-
-
