Authentication and Authorization completed

--- a/UdemyMicroservices.Web/Pages/Instructor/Index.cshtml
+++ b/UdemyMicroservices.Web/Pages/Instructor/Index.cshtml
@@ -5,6 +5,11 @@
 }
 
 
+
+@if (Model.CourseStatisticsViewModel is null)
+{
+    return;
+}
 <div class="row">
     <!-- Course Count Card -->
     <div class="col-md-6">
