--- a/UdemyMicroservices.Web/Pages/Shared/_Auth_Header.cshtml
+++ b/UdemyMicroservices.Web/Pages/Shared/_Auth_Header.cshtml
@@ -15,6 +15,10 @@
                 <li>
                     <hr class="dropdown-divider">
                 </li>
+
+                <li>
+                    <a class="dropdown-item" asp-page="/developer/tokens">Tokens</a>
+                </li>
                 <li>
                     <a class="dropdown-item" asp-page="/auth/signin" asp-page-handler="signout">Logout</a>
                 </li>
