--- a/UdemyMicroservices.Web/Pages/Index.cshtml
+++ b/UdemyMicroservices.Web/Pages/Index.cshtml
@@ -4,7 +4,35 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container mt-5">
+    <h1 class="mb-4">Kurslar</h1>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        @foreach (var course in Model.Courses!)
+        {
+            <div class="col">
+                <div class="card h-100 shadow-lg border-0">
+                    <a  asp-page="/Courses/Detail" asp-route-id="@course.Id">
+                        <course-picture src="@course.PictureUrl" class="card-img-top" alt="Kurs Resmi"></course-picture>
+                    </a>
+                 
+                    <div class="card-body">
+                        <h5 class="card-title">@course.Name</h5>
+                        <p class="card-text">@course.TruncateDescription(100)</p>
+                        <p class="card-text">
+                            <small class="text-muted">Kategori: <strong>@course.Category.Name</strong></small>
+                        </p>
+                        <p class="card-text"><strong>₺ @course.Price</strong></p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Eğitmen: <strong>@course.EducatorFullName</strong></small><br>
+                        <small class="text-muted">Oluşturulma Tarihi: <strong>@course.Created</strong></small><br>
+                        <small class="text-muted">Puan: <strong>@course.Rating</strong> | Süre: <strong>@course.Duration</strong> saat</small>
+                        
+                        <br>
+                        <a  asp-page="/Courses/Detail" asp-route-id="@course.Id" class="btn btn-primary mt-2">Detay Gör</a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
