--- a/UdemyMicroservices.Web/Pages/Index.cshtml
+++ b/UdemyMicroservices.Web/Pages/Index.cshtml
@@ -7,6 +7,18 @@
 <div class="container mt-5">
     <h1 class="mb-4">Kurslar</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
+        
+        
+        @if (!Model.Courses.Any())
+        {
+            <div class="col">
+                <div class="alert alert-warning" role="alert">
+                    Henüz hiç kurs eklenmemiş.
+                </div>
+            </div>
+            return;
+        }
+
         @foreach (var course in Model.Courses!)
         {
             <div class="col">
@@ -22,7 +34,7 @@
                             <small class="text-muted">Kategori: <strong>@course.Category.Name</strong></small>
                         </p>
                         <p class="card-text">
-                            <strong>₺ @course.Price</strong>
+                            <strong>@course.Price.ToString("C")</strong>
                         </p>
                     </div>
                     <div class="card-footer">
