--- a/UdemyMicroservices.Web/Pages/Shared/_Auth_Header.cshtml
+++ b/UdemyMicroservices.Web/Pages/Shared/_Auth_Header.cshtml
@@ -10,6 +10,9 @@
                     <a class="dropdown-item" asp-page="/instructor/index">Instructor</a>
                 </li>
                 <li>
+                    <a class="dropdown-item" asp-page="/basket/index">Baskets</a>
+                </li>
+                <li>
                     <a class="dropdown-item" asp-page="/auth/settings">Settings</a>
                 </li>
                 <li>
