--- a/UdemyMicroservices.Web/Pages/Basket/Index.cshtml
+++ b/UdemyMicroservices.Web/Pages/Basket/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model UdemyMicroservices.Web.Pages.Basket.IndexModel
+@model IndexModel
 @{
     var index = 1;
 }
@@ -15,7 +15,7 @@
     </thead>
     <tbody>
 
-    @if(Model.Basket.Items.Count == 0)
+    @if (Model.Basket.Items.Count == 0)
     {
         <tr>
             <td colspan="4" class="text-center">No items in the basket.</td>
@@ -37,22 +37,25 @@
                 @basketItem.Name
             </td>
             <td>
-                
-                
+
+
                 @if (Model.Basket.IsApplyDiscountCoupon)
                 {
-                        <span class="fw-bold">@basketItem.PriceWithDiscountRate!.Value.ToString("C")</span> <span style="text-decoration: line-through;"> <text>(@basketItem.Price.ToString("C"))</text> </span>
+                    <span class="fw-bold">@basketItem.PriceWithDiscountRate!.Value.ToString("C")</span>
+                    <span style="text-decoration: line-through;">
+                        <text>(@basketItem.Price.ToString("C"))</text>
+                    </span>
                 }
                 else
                 {
-                        @basketItem.Price.ToString("C")
+                    @basketItem.Price.ToString("C")
                 }
 
-              
+
             </td>
-        
+
             <td>
-            
+
                 <a asp-page-handler="Delete" asp-route-courseId="@basketItem.Id" class="btn btn-danger">Remove</a>
             </td>
         </tr>
@@ -69,12 +72,12 @@
 @if (Model.Basket.IsApplyDiscountCoupon)
 {
     <div class="alert alert-success" role="alert">
-        Discount coupon[@Model.Basket.Coupon] applied successfully. 
+        Discount coupon[@Model.Basket.Coupon] applied successfully.
     </div>
 }
 
 
-<form method="post" asp-page-handler="ApplyDiscount" >
+<form method="post" asp-page-handler="ApplyDiscount">
     <div class="mb-3">
         <label for="couponCode" class="form-label">Coupon Code</label>
         <input type="text" class="form-control" id="couponCode" name="CouponCode" required>
