--- a/UdemyMicroservices.Web/Pages/Shared/_Instructor_Layout.cshtml
+++ b/UdemyMicroservices.Web/Pages/Shared/_Instructor_Layout.cshtml
@@ -21,6 +21,7 @@
 
         <div class="col-md-9">
             <partial name="_Error"/>
+            <partial name="_Success"/>
             @RenderBody()
         </div>
         <div class="col-md-3">
@@ -46,7 +47,6 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
-
 @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
