--- a/UdemyMicroservices.Web/Pages/Shared/_Layout.cshtml
+++ b/UdemyMicroservices.Web/Pages/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     <main role="main" class="pb-3">
 
         <partial name="_Error"/>
+        <partial name="_Success"/>
         @RenderBody()
     </main>
 </div>
@@ -27,7 +28,6 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
-
 @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
