--- a/UdemyMicroservices.Web/Pages/Basket/Index.cshtml
+++ b/UdemyMicroservices.Web/Pages/Basket/Index.cshtml
@@ -52,7 +52,6 @@
                     @basketItem.Price.ToString("C")
                 }
 
-
             </td>
 
             <td>
@@ -80,9 +79,12 @@
 
 
 <form method="post" asp-page-handler="ApplyDiscount">
-    <div class="mb-3">
-        <label for="couponCode" class="form-label">Coupon Code</label>
-        <input type="text" class="form-control" id="couponCode" name="CouponCode" required>
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" id="couponCode" name="CouponCode" placeholder="Coupon Code" required>
+        <button type="submit" class="btn btn-primary">Apply Coupon</button>
     </div>
-    <button type="submit" class="btn btn-primary">Apply Coupon</button>
 </form>
+
+<a  asp-page="/order/index" class="btn btn-success w-100 mt-3 text-center">
+    <i class="fa-solid fa-credit-card"></i> Proceed to Payment Step
+</a>
