--- a/UdemyMicroservices.Web/Pages/AccessDenied.cshtml
+++ b/UdemyMicroservices.Web/Pages/AccessDenied.cshtml
@@ -1,8 +1,7 @@
 ﻿@page
-@model UdemyMicroservices.Web.Pages.AccessDeniedModel
+@model AccessDeniedModel
 @{
 }
-
 
 
 <div class="alert alert-danger" role="alert">
