order history page completed

--- a/UdemyMicroservices.Web/Pages/Shared/_Auth_Header.cshtml
+++ b/UdemyMicroservices.Web/Pages/Shared/_Auth_Header.cshtml
@@ -13,6 +13,10 @@
                     <a class="dropdown-item" asp-page="/basket/index">Baskets</a>
                 </li>
                 <li>
+                    <a class="dropdown-item" asp-page="/order/history">Order History</a>
+                </li>
+
+                <li>
                     <a class="dropdown-item" asp-page="/auth/settings">Settings</a>
                 </li>
                 <li>
